# gongcheck

./: .gitignore  Cargo.toml  index.html  package.json  styles.css
gong-crates/config/: Cargo.toml
gong-crates/config/src/: error.rs  lib.rs
gong-crates/error/: Cargo.toml
gong-crates/error/src/: lib.rs
gong-crates/markdown/: Cargo.toml
gong-crates/markdown/src/: lib.rs
gong-crates/markdowntg/: Cargo.toml
gong-crates/markdowntg/src/: gen.rs  lib.rs  parse.rs  tokenize.rs
public/: tailwind.css
src/: app.rs  main.rs  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/app/components/: helloworld.rs  mod.rs
src/components/: basic_icons.rs  editor.rs  header.rs  helloworld.rs  markdown_editor.rs  mod.rs  sidebar.rs  sidebar_icons.rs  sidebar_panels.rs  title.rs  titlebar.rs  welcome.rs
src/components/overview/: card.rs  mod.rs  modal.rs  navigator.rs  section.rs
src/contexts/: config.rs
src/pages/: character.rs  culture.rs  discovery.rs  image.rs  item.rs  location.rs  mod.rs  note.rs  organization.rs  overview.rs  place.rs  relation.rs  specy.rs  story.rs  welcome.rs  workspace.rs
src/utils/: mod.rs  tauri_invoke.rs
styles/: tailwind.css
