[workspace.package]
name = "gongcheck-ui"
authors = ["Marhead <clgns0415@gmail.com>"]
description = "A cross-platform markdown editor."
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
ron = "0.8.1"
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0.154", features = ["derive"] }
console_error_panic_hook = "0.1.7"
trunk = "0.20.1"
pulldown-cmark = "0.11.0"
yew-router = "0.18.0"
gloo = "0.11.0"
dirs = "5.0.1"
getrandom = { version = "0.2.8", features = ["js"] }
walkdir = "2.3.2"
thiserror = "1.0.61"
log = { version = "0.4", features = ["release_max_level_info"] }
tauri-sys = { git = "https://github.com/opensourcecheemsburgers/tauri-sys" , features=["tauri", "clipboard"] }
markdown = "1.0.0-alpha.10"
urlencoding = "2.1.2"
config = { path = "./gong-crates/config" }
error = { path = "./gong-crates/error" }
md = { path = "./gong-crates/markdown" }
mdtg = { path = "./gong-crates/markdowntg" }

[workspace]
members = [ 
    "gong-crates/config",
    "gong-crates/error",
    "gong-crates/markdown",
    "gong-crates/markdowntg", 
    "src-tauri" 
]
resolver = "2"
