[package]
name = "gongcheck"
version = "0.0.0"
description = "A Tauri App"
authors = ["Marhead"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-write-text", "shell-open"] }
serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
error = { workspace = true }
markdown = { workspace = true }
serde_json = "1"

window-vibrancy = "0.3.2"
window-shadows = "0.2.1"
rfd = "0.10.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
